--- a/index.html
+++ b/index.html
@@ -69,191 +69,57 @@
             <li><a href="#" class="sidebar__week">Week 52</a></li>
           </ul>
         </div>
-        <main class="planner">
+        <main class="planner" id="planner">
           <header class="header">
             <h1 class="heading-1">MyWeekly Planner</h1>
           </header>
           <div class="day">
             <h3 class="heading-3">Monday</h3>
-            <input type="text" class="to-do-input" id="input" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
-            <ul class="to-do-list">
-              <li class="to-do-item">
-                <input id="item1" type="checkbox" class="to-do-item__input">
-                <label for="item1" class="to-do-item__label">
-                  <span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item2" type="checkbox" class="to-do-item__input">
-                <label for="item2" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item3" type="checkbox" class="to-do-item__input">
-                <label for="item3" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item4" type="checkbox" class="to-do-item__input">
-                <label for="item4" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item5" type="checkbox" class="to-do-item__input">
-                <label for="item5" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
+            <input type="text" class="to-do-input" id="input-1" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
+            <ul class="to-do-list" id="to-do-list-1">
+
             </ul>
           </div>
           <div class="day">
             <h3 class="heading-3">Tuesday</h3>
-            <input class="to-do-input" id="input" placeholder="What needs to be done?">
-            <ul class="to-do-list">
-              <li class="to-do-item">
-                <input id="item6" type="checkbox" class="to-do-item__input">
-                <label for="item6" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item7" type="checkbox" class="to-do-item__input">
-                <label for="item7" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item8" type="checkbox" class="to-do-item__input">
-                <label for="item8" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item9" type="checkbox" class="to-do-item__input">
-                <label for="item9" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item10" type="checkbox" class="to-do-item__input">
-                <label for="item10" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
+            <input type="text" class="to-do-input" id="input-2" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
+            <ul class="to-do-list" id="to-do-list-2">
+
             </ul>
           </div>
           <div class="day">
             <h3 class="heading-3">Wednesday</h3>
-            <input class="to-do-input" id="input" placeholder="What needs to be done?">
-            <ul class="to-do-list">
-              <li class="to-do-item">
-                <input id="item11" type="checkbox" class="to-do-item__input">
-                <label for="item11" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item12" type="checkbox" class="to-do-item__input">
-                <label for="item12" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item13" type="checkbox" class="to-do-item__input">
-                <label for="item13" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item14" type="checkbox" class="to-do-item__input">
-                <label for="item14" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item15" type="checkbox" class="to-do-item__input">
-                <label for="item15" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
+            <input type="text" class="to-do-input" id="input-3" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
+            <ul class="to-do-list" id="to-do-list-3">
+
             </ul>
           </div>
           <div class="day">
             <h3 class="heading-3">Thursday</h3>
-            <input class="to-do-input" id="input" placeholder="What needs to be done?">
-            <ul class="to-do-list">
-              <li class="to-do-item">
-                <input id="item16" type="checkbox" class="to-do-item__input">
-                <label for="item16" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item17" type="checkbox" class="to-do-item__input">
-                <label for="item17" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item18" type="checkbox" class="to-do-item__input">
-                <label for="item18" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item19" type="checkbox" class="to-do-item__input">
-                <label for="item19" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item20" type="checkbox" class="to-do-item__input">
-                <label for="item20" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
+            <input type="text" class="to-do-input" id="input-4" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
+            <ul class="to-do-list" id="to-do-list-4">
+
             </ul>
           </div>
           <div class="day">
             <h3 class="heading-3">Friday</h3>
-            <input class="to-do-input" id="input" placeholder="What needs to be done?">
-            <ul class="to-do-list">
-              <li class="to-do-item">
-                <input id="item21" type="checkbox" class="to-do-item__input">
-                <label for="item21" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item22" type="checkbox" class="to-do-item__input">
-                <label for="item22" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item23" type="checkbox" class="to-do-item__input">
-                <label for="item23" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item24" type="checkbox" class="to-do-item__input">
-                <label for="item24" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item25" type="checkbox" class="to-do-item__input">
-                <label for="item25" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
+            <input type="text" class="to-do-input" id="input-5" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
+            <ul class="to-do-list" id="to-do-list-5">
+
             </ul>
           </div>
           <div class="day">
             <h3 class="heading-3">Saturday</h3>
-            <input class="to-do-input" id="input" placeholder="What needs to be done?">
-            <ul class="to-do-list">
-              <li class="to-do-item">
-                <input id="item26" type="checkbox" class="to-do-item__input">
-                <label for="item26" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item27" type="checkbox" class="to-do-item__input">
-                <label for="item27" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item28" type="checkbox" class="to-do-item__input">
-                <label for="item28" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item29" type="checkbox" class="to-do-item__input">
-                <label for="item29" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item30" type="checkbox" class="to-do-item__input">
-                <label for="item30" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
+            <input type="text" class="to-do-input" id="input-6" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
+            <ul class="to-do-list" id="to-do-list-6">
+
             </ul>
           </div>
           <div class="day">
             <h3 class="heading-3">Sunday</h3>
-            <input class="to-do-input" id="input" placeholder="What needs to be done?">
-            <ul class="to-do-list">
-              <li class="to-do-item">
-                <input id="item31" type="checkbox" class="to-do-item__input">
-                <label for="item31" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item32" type="checkbox" class="to-do-item__input">
-                <label for="item32" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item33" type="checkbox" class="to-do-item__input">
-                <label for="item33" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item34" type="checkbox" class="to-do-item__input">
-                <label for="item34" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
-              <li class="to-do-item">
-                <input id="item35" type="checkbox" class="to-do-item__input">
-                <label for="item35" class="to-do-item__label"><span class="to-do-item__checkbox"></span>Test</label>
-              </li>
+            <input type="text" class="to-do-input" id="input-7" placeholder="What needs to be done?"><span class="to-do-input__line"></span>
+            <ul class="to-do-list" id="to-do-list-7">
+
             </ul>
             <div class="division"></div>
           </div>
@@ -267,5 +133,6 @@
           </div>
         </main>
       </div>
+      <script src="script.js"></script>
     </body>
 </html>
